[package]
name = "websocket_chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
futures-util = "0.3"
rusqlite = "0.25.3"
tokio-stream = "0.1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
femme = "2.2.1"
[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]